cargo-features = ["different-binary-name"]

[package]
name = "wordboy"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 3

[[bin]]
name = "wordboy"
path = "src/main.rs"
filename = "wordboy.gba"

[dependencies]
bitflags = "2.6.0"
bitfrob = "1.3.2"
voladdress = "1.4.0"

[build-dependencies]
embedded-graphics = "0.8.1"
tinybmp = "0.6.0"
